@@ -1,10 +1,14 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:8-jdk-slim
+ENV PORT 8080
+ENV CLASSPATH /opt/lib
+EXPOSE 8080
 
-VOLUME /tmp
-ARG DEPENDENCY=target/dependency
+# copy pom.xml and wildcards to avoid this command failing if there's no target/lib directory
+COPY pom.xml target/lib* /opt/lib/
 
-COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY ${DEPENDENCY}/META-INF /app/META-INF
-COPY ${DEPENDENCY}/BOOT-INF/classes /app
-
-ENTRYPOINT ["java","-cp","app:app/lib/*","fr.unice.polytech.si5.al.creditrama.teamd.authorizationservice.AuthorizationServiceApplication"]
+# NOTE we assume there's only 1 jar in the target dir
+# but at least this means we don't have to guess the name
+# we could do with a better way to know the name - or to always create an app.jar or something
+COPY target/*.jar /opt/app.jar
+WORKDIR /opt
+CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
